# digital-server

./: .dockerignore  .envrc  .taplo.toml  Cargo.toml  Dockerfile  Makefile  README.md  compose.yaml
.github/workflows/: audit.yml  cd.yml  ci.yml
.sqlx/: query-08211bf5f47e41487fb8fd95aa3a69f08154e5ba0d3f20f84f8b6794faf1678f.json  query-12520259d2b1ebdac167d796efdcb452ad158355b1b39f58783a880b8e1fbdc3.json  query-14953d09a8af667e352a23c071f256ac2425ef62241fc69eb89abcd61dd0974c.json  query-2243337db6cb7e889a21c6c3b690d1569a3705fcec64c9cc64963a5f4a68ada0.json  query-3af74fb2946612b86ead8af31ce6258ae9958f20ddb15bd8dca8297210374471.json  query-6f3a984ef89cf9a95990c1decfd2736f10bc182928c057e3ae3dc713712cfdf3.json  query-740182225bf5d57e7cefb9ef8f978419c659fb87f614d86c8ee141e364aae3d0.json  query-844195ed353f433a75152b2807772d3586585cf751c9d13c7e27eb4b519963bd.json  query-8bd41ee2a26aa55d8eee626cf63a99103a3c5c708f7dbe3f7de26313e3ca7ef5.json  query-91183a48669db34b8fb11b6c6a10db9895ccd718b6ef12329bc1e3ffc4070c63.json  query-9fe6e87bc85f41bda223a155460eb3b54aa50508c31f9a189b94758191c17301.json  query-bb9c0ad8f777565f0adfa423fed0a6bdc94a1e7fa1699a3429abf8c45642ceeb.json  query-bf110728055fc985de0e59d52dd21b76b60983c27e2334a45ae0510f07e0062c.json  query-bf6d4af0b941baada4b17f1a01d1725d5b5d723de549f36bd05aaaf7d4e5f446.json  query-da1912c86bac68092e04809783a992097aa345fcf046b864d1ff33bd1a3acae8.json  query-dd0263c952a898aa32bbe51f37b992e3e684e3852b843ac75c0e196ac22d305f.json  query-e7232bb7fe0201340476814732e1316ab42d4b07bbf657de6f33aed0d28d6be1.json  query-f0666380ff2dbcdbd57792c5de6d0178af2b452e81c861d7a26aa621bb4c07fc.json
migrations/: 20240917104745_profile-tables.sql  20240928113831_tele_chatrooms.sql
server/: Cargo.toml
server/src/: errors.rs  lib.rs  main.rs  routes.rs  telemetry.rs
server/src/routes/: resume.rs
server/src/settings/: app.rs
settings/: Cargo.toml  base.yaml  local.yaml
settings/config/: base.yaml  local.yaml  production.yaml  stickers.yaml
settings/src/: app.rs  database.rs  environment.rs  lib.rs  openai.rs  redis.rs  s3.rs  stickers.rs  telemetry.rs
src/: environment.rs  lib.rs  main.rs  routes.rs  settings.rs
src/errors/: s3.rs
src/routes/: profile.rs
src/settings/: app.rs  database.rs  s3.rs
telebot/: Cargo.toml
telebot/src/: commands.rs  filters.rs  handlers.rs  lib.rs  main.rs  sticker.rs
telebot/src/errors/: chat.rs
telebot/src/handlers/: chat.rs  chatroom.rs  members.rs
