[package]
name = "burpple-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
dotenvy = "0.15.7"
figment = { version = "0.10.19", features = ["yaml", "env"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
thiserror = "1.0.63"
time = { version = "0.3.36", features = ["serde-human-readable"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
utoipa = { version = "4.2.3", features = ["axum_extras", "time"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum", "vendored"] }
utoipauto = "0.1.12"
uuid = { version = "1.10.0", features = ["v4", "serde"] }

[dependencies.sqlx]
default-features = false
features = ["macros", "migrate", "postgres", "time", "tls-rustls", "uuid", "runtime-tokio"]
version = "0.8.0"

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.dev]
panic = "abort" # This leads to better optimizations and smaller binaries (and is the default in Wasm anyways).

[profile.release]
debug = 0
panic = "abort" # This leads to better optimizations and smaller binaries (and is the default in Wasm anyways).
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
