[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
aws-sdk-s3 = { workspace = true }
axum = { workspace = true }
indexmap = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
settings = { version = "0.1.0", path = "../settings" }
sqlx = { workspace = true }
telebot = { version = "0.1.0", path = "../telebot" }
teloxide.workspace = true
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
utoipauto = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
