[package]
name = "telebot"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-openai = { workspace = true }
settings = { version = "0.1.0", path = "../settings" }
sqlx.workspace = true
teloxide = { workspace = true, features = ["macros", "webhooks", "webhooks-axum"] }
time = { workspace = true }
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
