[package]
name = "telebot"
version.workspace = true
edition.workspace = true

[dependencies]
async-openai = { workspace = true }
serde.workspace = true
settings = { version = "0.1.0", path = "../settings" }
sqlx.workspace = true
thiserror.workspace = true
time = { workspace = true }
tokio.workspace = true
tracing.workspace = true

[dependencies.teloxide]
features = ["macros", "webhooks", "webhooks-axum", "redis-storage", "bincode-serializer"]
workspace = true

[lints]
workspace = true
